--- a/About.css
+++ b/About.css
@@ -11,7 +11,7 @@
   min-height: 1334px;
   height: auto;
   width: 920px;
-  margin: 206px auto 0;
+  margin: 297px auto 54px;
 }
 
 .u-section-1 .u-container-layout-1 {
