--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,11 @@
 ---
-import Welcome from "../components/Welcome.astro";
-import Layout from "../layouts/Layout.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Card from "../components/Card.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>My Site thats cool wow thats interesting</h1>
-	</body>
-</html>
+<BaseLayout pageTitle="SetaHome">
+	<Card>
+			<p class="card-title">Welcome</p>
+			<p class="card-text">Sample text. Click to select the Text Element.</p>
+	</Card>
+</BaseLayout>
