--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
     </span>
     <span>
       <a href="/" ,     class="menu-text">HOME</a>
-      <a href="about" , class="menu-text">ABOUT</a>
+      <a href="/about" , class="menu-text">ABOUT</a>
     </span>
   <!-- </center> -->
   </p>
