--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,6 @@
 html {
   background-color: #282c34;
-  background-image: url("../assets/background.png");
+  background-image: url("https://raw.githubusercontent.com/SetaYoshi/Site/refs/heads/main/src/assets/background.png");
   font-family: sans-serif;
   width: 100%;
 }
