--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
-import signature from "../assets/signature.png";
+// import signature from "../assets/signature.png";
+const signature = "https://raw.githubusercontent.com/SetaYoshi/Site/refs/heads/main/src/assets/signature.png";
 ---
 
 <style>
