about line center fix

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -15,7 +15,9 @@ import AboutButton from "../components/AboutButton.astro";
       <i>Hope you enjoy browsing around!</i>
     </p>
     <br />
-    <div style={{ width: "80%", height: "4px", background: "#fff" }}></div>
+
+    <center><div style={{ width: "80%", height: "4px", background: "#fff" }}></div></center>
+    
     <br />
     <p class="card-heading">You can yell at me at:</p>
 
